--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=mahlware
 iban.blacklist=DE89370400440532013000,GB33BUKB20201555555555,DE15300606010505780780
-allowed.domains=example.de, http://localhost:8080
+allowed.domains=http://localhost:8080
 
